force-app/main/default/objects/Schedule_Report__c/Schedule_Report__c.object-meta.xml
<CustomObject>
    <description>Automatic Weekly Reports</description>
    <label>Schedule Report Delete Records</label>
    <nameField>
        <displayFormat>SRRN-{00000}</displayFormat>
        <label>Schedule Report Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Report Delete Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>