force-app/main/default/objects/Schedule_Report__c/fields/Formulae_email__c.field-meta.xml
<CustomField>
    <fullName>Formulae_email__c</fullName>
    <formula>&apos;info@passagehi.com&apos;</formula>
    <label>Formulae email</label>
    <type>Text</type>
</CustomField>