force-app/main/default/objects/Schedule_Report__c/fields/Report_Format__c.field-meta.xml
<CustomField>
    <fullName>Report_Format__c</fullName>
    <defaultValue>&quot;CSV&quot;</defaultValue>
    <label>Report Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>.csv</fullName>
                <default>true</default>
                <label>CSV</label>
            </value>
            <value>
                <fullName>.xls</fullName>
                <label>Excel</label>
            </value>
            <value>
                <fullName>.xlsx</fullName>
                <label>XLSX (iOS supported)</label>
            </value>
            <value>
                <fullName>printable</fullName>
                <isActive>false</isActive>
                <label>printable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>