force-app/main/default/objects/Schedule_Report__c/fields/Select_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Select_Contacts__c</fullName>
    <label>Select Contacts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Select</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>